(feature) Updating header logo and styling tags and spacing Logo is now using the correct colours Tags have been styled for blog posts list NOT featured post(as that has not been implimented yet) Created a structure for the modular sass files

--- a/app/assets/_dev/scss/settings/_colours.scss
+++ b/app/assets/_dev/scss/settings/_colours.scss
@@ -30,7 +30,7 @@ $grey-2: #818c94;
 $grey-3: #adbcc7;
 $grey-4: #dadee0;
 $offwhite: #efefef;
-$white: #fff;
+$white: #ffffff;
 
 // Standard palette, colours
 $purple: #2e358b;
@@ -75,12 +75,3 @@ $turquoise-25: #d5ecea;
 $light-blue: #2b8cc4;
 $light-blue-50: #96c6e2;
 $light-blue-25: #d5e8f3;
-
-
-// Site Width
-$site-max-width:960px;
-
-// Breakpoints
-$big-screen: $site-max-width;
-$medium-screen:640px;
-$small-screen: 480px;
